# PySLSQP_alpha

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  environment.yaml  meson.build  pyproject.toml  release_notes.md  requirements.txt  setup.py
.github/workflows/: actions.yml  build-and-test.yml  build_and_test.yml  build_install_test.yml  build_wheels_deploy.yml  build_wheels_test_deploy.yml
docs/: README.md  conf.py
docs/src/: api.md  basic.ipynb  getting_started.md  license.md  postprocessing.ipynb  welcome.md
py_slsqp/core/: vector.py
pyslsqp/: __init__.py  main.py  meson.build  pyslsqp.py  save_and_load.py  slsqp_optmz.f  visualize.py
pyslsqp/core/: vector.py
pyslsqp/slsqp/: slsqp.pyf
tests/: templates.py  test_docs.py  test_docstring_examples.py  test_optimize.py  test_readme.py  test_save_and_load.py
