[build-system]
build-backend = 'setuptools.build_meta'
requires = ['meson-python', 'setuptools', 'wheel', 'twine', 'numpy', 'scipy']

[project]
name = 'pyslsqp'
version = '0.0.1'
description = 'PySLSQP project'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE.txt'}
authors = [
  {name = 'Anugrah Jo Joshy', email = 'ajoshy.ucsd@gmail.com'},
]