[build-system]
build-backend = 'setuptools.build_meta'
requires = ['meson-python', 'setuptools', 'wheel', 'twine', 'numpy', 'scipy', 'ninja']

[project]
name = 'pyslsqp'
description = 'PySLSQP project'
readme = 'README.md'
requires-python = '>=3.8'
license = {file = 'LICENSE.txt'}
authors = [
  {name = 'Anugrah Jo Joshy', email = 'ajoshy.ucsd@gmail.com'},
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "pyslsqp.__version__"}

[tool.pytest.ini_options]
markers = [
    "visualize: marks tests as visualize (deselect with '-m \"not visualize\"')",
]

[tool.coverage.run]
omit = [
    # omit anything in a tests directory anywhere
    "*/tests/*",
    # omit everything in a docs directory anywhere
    "/docs/*",
    # omit this single file since visualization is not tested by default
    "pyslsqp/visualize.py",
    ]